--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
 		"silverstripe",
 		"cms",
 		"tweaks",
-		"javascript"
+		"javascript",
+		"seo"
 	],
 	"license": "The MIT License (MIT)",
 	"authors": [
