--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,6 @@
 		"issues": "https://github.com/axllent/silverstripe-cms-tweaks/issues"
 	},
 	"require": {
-		"silverstripe/framework": ">=3.3"
+		"silverstripe/framework": "~3.3"
 	}
 }
