--- a/_config/extensions.yml
+++ b/_config/extensions.yml
@@ -1,11 +1,3 @@
-LeftAndMain:
+SilverStripe\Admin\LeftAndMain:
   extensions:
-    - LeftAndMainCMSTweaksExt
-
-SiteTree:
-  extensions:
-    - MetaTagsEditorExt
-
-ContentController:
-  extensions:
-    - MetaTagsExt
+    - Axllent\CMSTweaks\LeftAndMainCMSTweaksExt
