--- a/composer.json
+++ b/composer.json
@@ -7,8 +7,7 @@
 		"silverstripe",
 		"cms",
 		"tweaks",
-		"javascript",
-		"seo"
+		"javascript"
 	],
 	"license": "The MIT License (MIT)",
 	"authors": [
@@ -20,7 +19,12 @@
 	"support": {
 		"issues": "https://github.com/axllent/silverstripe-cms-tweaks/issues"
 	},
-	"require": {
-		"silverstripe/framework": "~3.3"
-	}
+    "require": {
+		"silverstripe/framework": "^4.0@dev"
+	},
+    "autoload": {
+        "psr-4": {
+            "Axllent\\CMSTweaks\\": "src/"
+        }
+    }
 }
