--- a/_config/extensions.yml
+++ b/_config/extensions.yml
@@ -1,3 +1,7 @@
 SilverStripe\Admin\LeftAndMain:
   extensions:
     - Axllent\CMSTweaks\LeftAndMainCMSTweaksExt
+
+SilverStripe\CMS\Model\SiteTree:
+  extensions:
+    - Axllent\CMSTweaks\SEOTab
