--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
 		"issues": "https://github.com/axllent/silverstripe-cms-tweaks/issues"
 	},
     "require": {
-		"silverstripe/framework": "^4.0@dev"
+		"silverstripe/framework": "^4.0@dev",
+        "axllent/silverstripe-form-fields": "*"
 	},
     "autoload": {
         "psr-4": {
