--- a/composer.json
+++ b/composer.json
@@ -17,13 +17,12 @@
         }
     ],
     "support": {
-    "issues": "https://github.com/axllent/silverstripe-cms-tweaks/issues"
+        "issues": "https://github.com/axllent/silverstripe-cms-tweaks/issues"
     },
     "require": {
-        "silverstripe/vendor-plugin": "^1.0",
-        "silverstripe/framework": "^4.0",
+        "silverstripe/cms": "^4.0 || ^5.0",
         "axllent/silverstripe-form-fields": "^1.2"
-	},
+    },
     "extra": {
         "expose": [
             "css",
