--- a/composer.json
+++ b/composer.json
@@ -13,15 +13,15 @@
     "authors": [
         {
             "name": "Ralph Slooten",
-            "homepage": "http://www.axllent.org/"
+            "homepage": "https://www.axllent.org/"
         }
     ],
     "support": {
         "issues": "https://github.com/axllent/silverstripe-cms-tweaks/issues"
     },
     "require": {
-        "silverstripe/cms": "^4.0 || ^5.0",
-        "axllent/silverstripe-form-fields": "^1.2"
+        "silverstripe/cms": "^4.0 || ^5.0 || ^6.0",
+        "axllent/silverstripe-form-fields": "^1.2 || ^2.0"
     },
     "extra": {
         "expose": [
